dev/kubernetes-deployments/babajipod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: babajipod
  namespace: babaji-ns
spec:
  containers:
    - name: babajiweb-containers
      image: sudarshanlnx/farmfresh:v1
      imagePullPolicy: IfNotPresent
      ports:
      - name: webport
        containerPort: 80
        protocol: TCP
      resources:
        requests:
          memory: "100Mi"
          cpu: "250m"
        limits:
          memory: "200Mi"
          cpu: "500m"
  restartPolicy: Always
