dev/kubernetes-deployments/babaji1_mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: babajidataapp
  namespace: babajins
spec:
  replicas: 1
  serviceName: mongosvc
  selector:
    matchLabels:
      apptype: dataapp
      env: dev
  template:
    metadata:
      name: babajidataapptm
      labels:
        apptype: dataapp
        env: dev
    spec:
      volumes:
      - name: babajidatavol
        persistentVolumeClaim:
          claimName: babajivolclaim
      containers:
      - name: babajidatacon
        image: sudarshanlnx/mongo:latest
        imagePullPolicy: Always
        ports:
        - name: mongo
          containerPort: 27017
          protocol: TCP
        volumeMounts:
        - mountPath: /data/db
          name: babajidatavol
---
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  namespace: babajins
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
    protocol: TCP
  selector:
    apptype: dataapp
    env: dev
