dev/kubernetes-deployments/babajiloadbalancer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: babaji-loadbalancer
  namespace: babaji-new
  labels:
    app: app
    env: dev
spec:
  containers:
  - name: babaji-lbcon
    image: sudarshanlnx/farmfresh:v1
    imagePullPolicy: Always
    ports:
    - name: apache
      containerPort: 80
      protocol: TCP
    resources:
      requests:
        memory: "100Mi"
        cpu: "250m"
      limits:
        memory: "2500Mi"
        cpu: "500m"
  restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: babajiloadbala-svc
  namespace: babaji-new
spec:
  type: LoadBalancer
  ports:
  - name: lbport
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: app
    env: dev
