dev/kubernetes-deployments/babajinodeport.yaml
apiVersion: v1
kind: Pod
metadata:
  name: babaji-webapp
  namespace: babaji-new
  labels:
    app: app
    env: dev
spec:
  containers:
  - name: webapp
    image: sudarshanlnx/farmfresh:v1
    imagePullPolicy: Always
    ports:
    - name: webapp-port
      containerPorts: 80
      protocol: TCP
    resources:
      requests:
        memory = "100Mi"
        cpu = "250m"
      limits:
        memory = "250Mi"
        cpu = "500m"
  restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: babaji-svc
  namespace: babaji-new
spec:
  type: NodePort
  ports:
  - name: apache
    nodePort: 30002
    port: 80
    targetPort: 80
    protocol: TCP
  selectors:
    app: app
    env: dev
