dev/kubernetes-deployments/babaji1_web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babajiwebapp
  namespace: babajins
spec:
  replicas: 1
  selector:
    matchLabels:
      apptype: webapp
      env: dev
  template:
    metadata:
      name: babajiwebapptm
      labels:
        apptype: webapp
        env: dev
    spec:
      containers:
      - name: babajiwebcon
        image: sudarshanlnx/twotier:latest
        imagePullPolicy: Always
        ports:
        - name: apache
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: babajiwebsvc
  namespace: babajins
spec:
  ports:
  - name: apache
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    apptype: webapp
    env: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webingress
  namespace: babajins
spec:
  ingressClassName: nginx
  rules:
  - host: "www.theckr.shop"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: babajiwebsvc
            port:
              number: 80
