dev/kubernetes-deployments/babajiingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babajiweb1
  namespace: babajiins
spec:
  replicas: 2
  selector:
    matchLabels:
      apptype: web
      env: dev
  template:
    metadata:
      name: webapp1
      labels:
        apptype: web
        env: dev
    spec:
      containers:
      - name: babajiwebapp1
        image: sudarshanlnx/farmfresh:v1
        imagePullPolicy: Always
        ports:
        - name: apache
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "250Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: babajiwebappsvc
  namespace: babajiins
spec:
  ports:
    - name: apache
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    apptype: web
    env: dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babajiwebapp2
  namespace: babajiins
spec:
  replicas: 2
  selector:
    matchLabels:
      apptype: ckr
      env: dev
  template:
    metadata:
      name: ckrapp
      labels:
        apptype: ckr
        env: dev
    spec:
      containers:
      - name: ckrwebcon
        image: ckrrajeshkumar/babajiwebcon:v2
        imagePullPolicy: Always
        ports:
        - name: apache
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "250Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: ckrappsvc
  namespace: babajiins
spec:
  ports:
  - name: apache
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    apptype: ckr
    env: dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babajiwebapp3
  namespace: babajiins
spec:
  replicas: 2
  selector:
    matchLabels:
      apptype: babaji
      env: dev
  template:
    metadata:
      name: babajiwebapp
      labels:
        apptype: babaji
        env: dev
    spec:
      containers:
      - name: babajiwebapp
        image: ckrrajeshkumar/babajiapp12:latest
        imagePullPolicy: Always
        ports:
        - name: apache
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "250Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: babajiappsvc
  namespace: babajiins
spec:
  ports:
  - name: apache
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    apptype: babaji
    env: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: babajiingress
  namespace: babajiins
  annotations:
    awnginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: "www.theckr.shop"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: babajiwebappsvc
            port:
              number: 80
  - host: "www.theckr.shop"
    http:
      paths:
      - path: "/ckr"
        pathType: "Prefix"
        backend:
          service:
            name: ckrappsvc
            port:
              number: 80

  - host: "www.theckr.shop"
    http:
      paths:
      - path: "/babaji"
        pathType: "Prefix"
        backend:
          service:
            name: babajiappsvc
            port:
              number: 80
